fixed selected row overflow

--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ h5,
 h6 {
     margin: 0;
     padding: 0;
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
+    font-family: "Inconsolata", monospace;
     user-select: none;
 }
 
@@ -95,9 +96,11 @@ body {
 .line {
     height: 18px;
     box-sizing: border-box;
+    position: relative;
 }
 
 .line-selected {
+    position: relative;
     box-shadow: inset 0 1px 0 0 var(--accent), inset 0 -1px 0 0 var(--accent);
 }
 
@@ -105,7 +108,7 @@ body {
     background-color: var(--select-bg);
     height: 100%;
     width: 0;
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
 }
